# GameOfLife_inator

./: CMakeLists.txt  README.md
res/: compute.glsl  fragment.glsl  vertex.glsl
src/: main.cpp
